# advent_of_hardcaml

./: .gitignore  README.md  advent_of_hardcaml.opam  div_mod.py  dune-project
docs/: day_1.md  day_3.md
src/: div_mod.ml  div_mod.mli
src/day_1/: advent_soln.ml  advent_soln.mli  div_mod.ml  div_mod.mli
src/day_3/: bank_mem.ml  bank_mem.mli  bcd_to_binary.ml  bcd_to_binary.mli  calculate_joltage.ml  calculate_joltage.mli  day3_soln.ml  day3_soln.mli  decrement_fifo.ml  decrement_fifo.mli  dune
test/day_1/: dune  test_advent_soln.ml  test_div_mod.ml
test/day_3/: dune  test_bank_mem.ml  test_bcd_to_binary.ml  test_calculate_joltage.ml  test_day3.ml  test_decrement_fifo.ml
